@@ -27,6 +27,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / develop requires]
  - Dist::Zilla::Plugin::MetaYAML
 
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
 0.003001 2015-02-04T09:48:39Z
  [Added / configure requires]
  - perl 5.006
